kubernetes/apps/phatgiaohoahao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phatgiaohoahao
  namespace: phatgiaohoahao
  labels:
    app.kubernetes.io/name: phatgiaohoahao
    app.kubernetes.io/part-of: phatgiaohoahao-site
spec:
  type: ClusterIP
  selector:
    app: phatgiaohoahao
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
